[project]
name = "fde-playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beir>=2.2.0",
    "datasets>=3.6.0",
    "fitz>=0.0.1.dev2",
    "langchain>=0.3.26",
    "neural-cherche>=1.4.3",
    "nltk>=3.9.1",
    "numpy>=2.3.1",
    "pymupdf>=1.26.3",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
]
